--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <center>
         <div>
-            <h2>Input 0 s.d 9999</h2>
+            <h2>Input 0 s.d 9999 - M. Hafiz Bukhari</h2>
             <input id="number" type="text">
             <h5>Terbilang = <span></span></h5>
         </div>
@@ -106,7 +106,7 @@
        input.addEventListener("input", e=>output.innerHTML = Main(input.value).toUpperCase())
 
 
-
+    //    M. Hafiz Bukhari
     </script>
 </body>
 </html>
